syntax = "proto3";

package com.example;

option java_multiple_files = true;
option java_package = "com.example.lib";
option java_outer_classname = "HelloWorldProto";

service MyService {
  rpc SayHello (Empty) returns (HelloReply);
}

message Empty {}

message HelloReply {
  string message = 1;
}
